# tiralabra2022

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: kaytto-ohje.md  maarittely.md  testaus.md  toteutus.md  tuntikirjanpito.md  viikkoraportt_2.md  viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
src/: index.py
src/sovelluslogiikka/: math_tools.py  prime_tools.py
src/tests/: math_tools_test.py  prime_tools_test.py
src/ui/: ui.py
